tests/pytest/gold/gziptest/snapshots/aconf.json
{
    "_errors": {},
    "_notices": {
        "gziptest.default.1": [
            "apiVersion ambassador/v0 is deprecated, consider upgrading"
        ],
        "gziptest.default.2": [
            "apiVersion ambassador/v0 is deprecated, consider upgrading"
        ]
    },
    "_sources": {
        "--diagnostics--": {
            "_referenced_by": {},
            "apiVersion": "getambassador.io/v0",
            "description": "The '--diagnostics--' source marks objects created by Ambassador to assist with diagnostic output.",
            "kind": "Diagnostics",
            "location": "--diagnostics--",
            "name": "Ambassador Diagnostics",
            "namespace": null,
            "rkey": "--diagnostics--",
            "serialization": null,
            "version": "getambassador.io/v0"
        },
        "--internal--": {
            "_referenced_by": {},
            "apiVersion": "getambassador.io/v0",
            "description": "The '--internal--' source marks objects created by Ambassador's internal logic.",
            "kind": "Internal",
            "location": "--internal--",
            "name": "Ambassador Internals",
            "namespace": null,
            "rkey": "--internal--",
            "serialization": null,
            "version": "getambassador.io/v0"
        },
        "ambassador-edge-stack.default.1": {
            "_referenced_by": {},
            "ambassador_id": [
                "_automatic_"
            ],
            "apiVersion": "getambassador.io/v2",
            "generation": 1,
            "kind": "Mapping",
            "location": "ambassador-edge-stack.default.1",
            "metadata_labels": {
                "ambassador_crd": "ambassador-edge-stack.default",
                "ambassador_diag_class": "private",
                "product": "aes"
            },
            "name": "ambassador-edge-stack",
            "namespace": "default",
            "precedence": 1000000,
            "prefix": "/.ambassador/",
            "rewrite": "",
            "rkey": "ambassador-edge-stack.default.1",
            "serialization": "ambassador_id:\n- _automatic_\napiVersion: getambassador.io/v2\ngeneration: 1\nkind: Mapping\nmetadata_labels:\n  ambassador_crd: ambassador-edge-stack.default\n  ambassador_diag_class: private\n  product: aes\nname: ambassador-edge-stack\nnamespace: default\nprecedence: 1000000\nprefix: /.ambassador/\nrewrite: ''\nservice: 127.0.0.1:8500\n",
            "service": "127.0.0.1:8500"
        },
        "cleartext-host-gziptest.default.1": {
            "_referenced_by": {},
            "acmeProvider": {
                "authority": "none"
            },
            "ambassador_id": [
                "gziptest"
            ],
            "apiVersion": "getambassador.io/v2",
            "generation": 1,
            "hostname": "*",
            "kind": "Host",
            "location": "cleartext-host-gziptest.default.1",
            "metadata_labels": {
                "ambassador_crd": "cleartext-host-gziptest.default",
                "kat-ambassador-id": "gziptest",
                "scope": "AmbassadorTest"
            },
            "name": "cleartext-host-gziptest",
            "namespace": "default",
            "requestPolicy": {
                "insecure": {
                    "action": "Route"
                }
            },
            "rkey": "cleartext-host-gziptest.default.1",
            "selector": {
                "matchLabels": {
                    "hostname": "gziptest"
                }
            },
            "serialization": "acmeProvider:\n  authority: none\nambassador_id:\n- gziptest\napiVersion: getambassador.io/v2\ngeneration: 1\nhostname: '*'\nkind: Host\nmetadata_labels:\n  ambassador_crd: cleartext-host-gziptest.default\n  kat-ambassador-id: gziptest\n  scope: AmbassadorTest\nname: cleartext-host-gziptest\nnamespace: default\nrequestPolicy:\n  insecure:\n    action: Route\nselector:\n  matchLabels:\n    hostname: gziptest\n"
        },
        "gziptest.default.1": {
            "_referenced_by": {},
            "ambassador_id": "gziptest",
            "apiVersion": "getambassador.io/v0",
            "config": {
                "gzip": {
                    "content_type": [
                        "text/plain"
                    ],
                    "min_content_length": 32,
                    "window_bits": 15
                }
            },
            "kind": "Module",
            "location": "gziptest.default.1",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "gziptest",
                "scope": "AmbassadorTest"
            },
            "name": "ambassador",
            "namespace": "default",
            "rkey": "gziptest.default.1",
            "serialization": "ambassador_id: gziptest\napiVersion: ambassador/v0\nconfig:\n  gzip:\n    content_type:\n    - text/plain\n    min_content_length: 32\n    window_bits: 15\nkind: Module\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: gziptest\n  scope: AmbassadorTest\nname: ambassador\nnamespace: default\n"
        },
        "gziptest.default.2": {
            "_referenced_by": {},
            "ambassador_id": "gziptest",
            "apiVersion": "getambassador.io/v0",
            "kind": "Mapping",
            "location": "gziptest.default.2",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "gziptest",
                "scope": "AmbassadorTest"
            },
            "name": "gziptest-http",
            "namespace": "default",
            "prefix": "/target/",
            "rkey": "gziptest.default.2",
            "serialization": "ambassador_id: gziptest\napiVersion: ambassador/v0\nkind: Mapping\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: gziptest\n  scope: AmbassadorTest\nname: gziptest-http\nnamespace: default\nprefix: /target/\nservice: gziptest-http\n",
            "service": "gziptest-http"
        },
        "k8s-gziptest-admin-default": {
            "_referenced_by": {},
            "ambassador_id": "gziptest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-gziptest-admin-default",
            "metadata_labels": {
                "kat-ambassador-id": "gziptest",
                "scope": "AmbassadorTest",
                "service": "gziptest-admin"
            },
            "name": "gziptest-admin",
            "namespace": "default",
            "rkey": "k8s-gziptest-admin-default",
            "serialization": "ambassador_id: gziptest\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: gziptest\n  scope: AmbassadorTest\n  service: gziptest-admin\nname: gziptest-admin\nnamespace: default\n"
        },
        "k8s-gziptest-default": {
            "_referenced_by": {},
            "ambassador_id": "gziptest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-gziptest-default",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "gziptest",
                "scope": "AmbassadorTest"
            },
            "name": "gziptest",
            "namespace": "default",
            "rkey": "k8s-gziptest-default",
            "serialization": "ambassador_id: gziptest\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: gziptest\n  scope: AmbassadorTest\nname: gziptest\nnamespace: default\n"
        },
        "k8s-gziptest-http-default": {
            "_referenced_by": {},
            "ambassador_id": "gziptest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-gziptest-http-default",
            "metadata_labels": {
                "kat-ambassador-id": "gziptest",
                "scope": "AmbassadorTest"
            },
            "name": "gziptest-http",
            "namespace": "default",
            "rkey": "k8s-gziptest-http-default",
            "serialization": "ambassador_id: gziptest\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: gziptest\n  scope: AmbassadorTest\nname: gziptest-http\nnamespace: default\n"
        }
    },
    "hosts": {
        "cleartext-host-gziptest": {
            "acmeProvider": {
                "authority": "none"
            },
            "ambassador_id": [
                "gziptest"
            ],
            "apiVersion": "getambassador.io/v2",
            "generation": 1,
            "hostname": "*",
            "kind": "Host",
            "metadata_labels": {
                "ambassador_crd": "cleartext-host-gziptest.default",
                "kat-ambassador-id": "gziptest",
                "scope": "AmbassadorTest"
            },
            "name": "cleartext-host-gziptest",
            "namespace": "default",
            "requestPolicy": {
                "insecure": {
                    "action": "Route"
                }
            },
            "selector": {
                "matchLabels": {
                    "hostname": "gziptest"
                }
            }
        }
    },
    "mappings": {
        "ambassador-edge-stack": {
            "ambassador_id": [
                "_automatic_"
            ],
            "apiVersion": "getambassador.io/v2",
            "generation": 1,
            "kind": "Mapping",
            "metadata_labels": {
                "ambassador_crd": "ambassador-edge-stack.default",
                "ambassador_diag_class": "private",
                "product": "aes"
            },
            "name": "ambassador-edge-stack",
            "namespace": "default",
            "precedence": 1000000,
            "prefix": "/.ambassador/",
            "rewrite": "",
            "service": "127.0.0.1:8500"
        },
        "gziptest-http": {
            "ambassador_id": "gziptest",
            "apiVersion": "getambassador.io/v0",
            "kind": "Mapping",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "gziptest",
                "scope": "AmbassadorTest"
            },
            "name": "gziptest-http",
            "namespace": "default",
            "prefix": "/target/",
            "service": "gziptest-http"
        }
    },
    "modules": {
        "ambassador": {
            "apiVersion": "getambassador.io/v0",
            "gzip": {
                "content_type": [
                    "text/plain"
                ],
                "min_content_length": 32,
                "window_bits": 15
            },
            "kind": "Module",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "gziptest",
                "scope": "AmbassadorTest"
            },
            "name": "ambassador",
            "namespace": "default"
        }
    },
    "service": {
        "k8s-gziptest-admin-default": {
            "ambassador_id": "gziptest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "kat-ambassador-id": "gziptest",
                "scope": "AmbassadorTest",
                "service": "gziptest-admin"
            },
            "name": "gziptest-admin",
            "namespace": "default"
        },
        "k8s-gziptest-default": {
            "ambassador_id": "gziptest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "gziptest",
                "scope": "AmbassadorTest"
            },
            "name": "gziptest",
            "namespace": "default"
        },
        "k8s-gziptest-http-default": {
            "ambassador_id": "gziptest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "kat-ambassador-id": "gziptest",
                "scope": "AmbassadorTest"
            },
            "name": "gziptest-http",
            "namespace": "default"
        }
    }
}
